feat: add tag and merge user functionality (#18)
* feat: add tags and merge user function

* feat: implement tagging system for invoices with UI tooltips and database adjustments

* feat: add HTML to PDF conversion endpoint and service

- Implemented UploadHtmlToPdf handler to convert HTML content to PDF and upload to S3.
- Introduced PDFService interface and pdfService implementation using headless Chrome for PDF generation.
- Added PDFOptions struct for customizable PDF generation settings.
- Updated OpenAPI specification to include new endpoint and request/response schemas.
- Configured Kubernetes deployment to include headless Chrome container for PDF processing.

* feat: update invoice tag handling to use tag IDs instead of names

- Modified the invoice model to include a new structure for InvoiceTagReference, which contains both ID and name for tags.
- Updated CreateInvoice and UpdateInvoice handlers to accept tag IDs instead of tag names.
- Adjusted OpenAPI specification to reflect changes in tag handling, including new schema for InvoiceTagReference and updated request/response structures.
- Introduced SetInvoiceTagsByID method in InvoiceService to manage invoice tags using their IDs, ensuring proper ownership verification and mapping creation.

* fix: update @rx-lab/dashboard-searching-ui dependency to version 1.1.2
